<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/uuid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:text="@string/uuid"
        android:layout_marginBottom="5dp"
        />

    <TextView
        android:id="@+id/manufacturer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:text="@string/manufacturer"
        android:layout_marginBottom="5dp"
        />

    <TextView
        android:id="@+id/model"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:text="@string/model"
        android:layout_marginBottom="5dp"
        />
    <TextView
        android:id="@+id/mac_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:text="@string/mac_address"
        android:layout_marginBottom="5dp"
        />

    <TextView
        android:id="@+id/display_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:text="@string/display_size"
        android:layout_marginBottom="5dp"
        />

    <TextView
        android:id="@+id/ram_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:text="@string/ram_size"
        android:layout_marginBottom="5dp"
        />

    <TextView
        android:id="@+id/data_storage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:text="@string/data_storage"
        android:layout_marginBottom="5dp"
        />

    <View android:layout_weight="1" android:layout_height="0dp" android:layout_width="0dp" />

    <Button
        android:id="@+id/button_snapshot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:onClick="sendSnapshot"
        android:text="@string/send_snapshot"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498" />

</LinearLayout>